--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -15,7 +15,7 @@ TESTS =	mknmz-1 mknmz-2 mknmz-3 mknmz-4 mknmz-5 \
 	namazu-6 namazu-7 namazu-8 namazu-9 namazu-10 \
 	namazu-11 \
 	namazu-cgi-1 namazu-cgi-2 namazu-cgi-3 namazu-cgi-4 \
-	namazu-cgi-5 namazu-cgi-6 namazu-cgi-7 \
+	namazu-cgi-5 namazu-cgi-6 namazu-cgi-7 namazu-cgi-8 \
 	ja-mknmz-1 ja-namazu-cgi-1
 
 clean-local:
